<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home"
        android:title="@string/navigation_home" />

    <item
        android:id="@+id/nav_search"
        android:icon="@drawable/ic_search"
        android:title="@string/navigation_search" />

    <item
        android:id="@+id/nav_more"
        android:icon="@drawable/ic_more"
        android:title="@string/navigation_more" />

    <item
        android:id="@+id/nav_favorites"
        android:icon="@drawable/ic_favorite"
        android:title="@string/navigation_favorites" />

    <item
        android:id="@+id/nav_person"
        android:icon="@drawable/ic_person"
        android:title="@string/navigation_personal" />
</menu>