<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_photo"
        android:orderInCategory="100"
        android:icon="@drawable/ic_camera"
        android:title="@string/action_camera"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction"/>

    <item
        android:id="@+id/action_live"
        android:orderInCategory="100"
        android:icon="@drawable/ic_live"
        android:title="@string/action_live"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction" />

    <item
        android:id="@+id/action_chat"
        android:orderInCategory="100"
        android:icon="@drawable/ic_send"
        android:title="@string/action_chat"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction"/>

</menu>